@@ -27,6 +27,8 @@ static string[] opt_script;
 [CCode (array_length=false, array_null_terminated=true)]
 static string[] opt_unix_stream;
 [CCode (array_length=false, array_null_terminated=true)]
+static string[] opt_evemu_events;
+[CCode (array_length=false, array_null_terminated=true)]
 static string[] opt_program;
 static bool opt_version = false;
 
@@ -43,6 +45,9 @@ static const GLib.OptionEntry[] options = {
     {"unix-stream", 'u', 0, OptionArg.FILENAME_ARRAY, ref opt_unix_stream,
      "Load an umockdev-record script for a mocked Unix stream socket. Can be specified multiple times.",
      "socket_path=scriptfilename"},
+    {"evemu-events", 'e', 0, OptionArg.FILENAME_ARRAY, ref opt_evemu_events,
+     "Load an evemu .events file into the testbed. Can be specified multiple times.",
+     "devname=eventsfilename"},
     {"", 0, 0, OptionArg.STRING_ARRAY, ref opt_program, "", ""},
     {"version", 0, 0, OptionArg.NONE, ref opt_version, "Output version information and exit"},
     { null }
@@ -140,6 +145,20 @@ main (string[] args)
             testbed.load_socket_script (parts[0], Posix.SOCK_STREAM, parts[1]);
         } catch (Error e) {
             stderr.printf ("Error: Cannot install %s for stream socket %s: %s\n", parts[1], parts[0], e.message);
+            return 1;
+        }
+    }
+
+    foreach (var i in opt_evemu_events) {
+        string[] parts = i.split ("=", 2); // devname, eventsfilename
+        if (parts.length != 2) {
+            stderr.printf ("Error: --evemu-events argument must be devname=filename\n");
+            return 1;
+        }
+        try {
+            testbed.load_evemu_events (parts[0], parts[1]);
+        } catch (Error e) {
+            stderr.printf ("Error: Cannot install %s for device %s: %s\n", parts[1], parts[0], e.message);
             return 1;
         }
     }
